src/snapshots/blog__snapshot@inside-rust__2021__06__15__1.53.0-prelease.html.snap
---
source: src/lib.rs
expression: content
input_file: site/inside-rust/2021/06/15/1.53.0-prelease.html
snapshot_kind: text
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>1.53.0 pre-release testing | Inside Rust Blog</title>
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
<meta name="description" content="Empowering everyone to build reliable and efficient software.">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rustlang">
     <meta name="twitter:creator" content="@rustlang">
     <meta name="twitter:title" content="1.53.0 pre-release testing | Inside Rust Blog">
     <meta name="twitter:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta name="twitter:image" content="https://www.rust-lang.org/static/images/rust-social.jpg">
    
    <!-- Facebook OpenGraph -->
    <meta property="og:title" content="1.53.0 pre-release testing | Inside Rust Blog" />
    <meta property="og:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta property="og:image" content="https://www.rust-lang.org/static/images/rust-social-wide.jpg" />
    <meta property="og:type" content="website" />
    <meta property="og:locale" content="en_US" />
    
    <!-- styles -->
    <link rel="stylesheet" href="../../../../styles/vendor.css"/>
    <link rel="stylesheet" href="../../../../styles/fonts.css"/>
    <link rel="stylesheet" href="../../../../styles/app.css"/>
    <link rel="stylesheet" href="../../../../styles/highlight.css"/>
    
    <!-- stylesheet for user agents without js -->
    <noscript>
        <link rel="stylesheet" href="../../../../styles/noscript.css">
    </noscript>
    
    <!-- favicon -->
    <link rel="apple-touch-icon" sizes="180x180" href="../../../../images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="16x16" href="../../../../images/favicon-16x16.png">
    <link rel="icon" type="image/png" sizes="32x32" href="../../../../images/favicon-32x32.png">
    <link rel="icon" type="image/svg+xml" href="../../../../images/favicon.svg">
    <link rel="manifest" href="../../../../images/site.webmanifest">
    <link rel="mask-icon" href="../../../../images/safari-pinned-tab.svg" color="#5bbad5">
    <meta name="msapplication-TileColor" content="#00aba9">
    <meta name="theme-color" content="#ffffff">
    
     <!-- atom -->
     <link type="application/atom+xml" rel="alternate" href="https://blog.rust-lang.org/inside-rust/feed.xml" title="Inside Rust Blog" />
    
    <!-- theme switcher -->
    <script src="../../../../scripts/theme-switch.js"></script>
  </head>
  <body>
    <nav class="flex flex-row justify-center justify-end-l items-center flex-wrap ph2 pl3-ns pr4-ns">
      <div class="brand flex-auto w-100 w-auto-l self-start tc tl-l">
        <a href="../../../../inside-rust/">
          <img class="v-mid ml0-l rust-logo" alt="Rust Logo" src="../../../../images/rust-logo-blk.svg">
          <span class="dib ml1 ml0-l">Inside Rust Blog</span>
        </a>
      </div>
    
      <ul class="nav list w-100 w-auto-l flex flex-none flex-row flex-wrap justify-center justify-end-l items-center pv2 ph0 ph4-ns">
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org">Rust</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools/install">Install</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/learn">Learn</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools">Tools</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/governance">Governance</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/community">Community</a></li>
        <button class="theme-icon" onclick="dropdown();">🖌
          <ul id="theme-choice">
            <li class="theme-item" onclick="changeThemeTo('light');">Light</li>
            <li class="theme-item" onclick="changeThemeTo('dark');">Dark</li>
            <li class="theme-item" onclick="changeThemeTo('system');">System</li>
          </ul>
        </button>
        <script src="../../../../scripts/theme-switch-post.js"></script>
      </ul>
    </nav>
<section id="1.53.0 pre-release testing" class="white">
  <div class="w-100 mw-none ph3 mw8-m mw8-l center f3">
    <header>
      <h2>1.53.0 pre-release testing</h2>
      <div class="highlight mt2 mb3"></div>
    </header>

    <div class="publish-date-author">June 15, 2021 &middot; Mark Rousskov
     on behalf of <a href="https://www.rust-lang.org/governance/teams/release">The Release Team</a> 
    </div>

    <div class="post">
      <p>The 1.53.0 pre-release is ready for testing. The release is scheduled for this
Thursday, June 17th. <a href="https://github.com/rust-lang/rust/blob/master/RELEASES.md#version-1530-2021-06-17">Release notes can be found here.</a></p>
<p>You can try it out locally by running:</p>
<pre><code class="language-plain">RUSTUP_DIST_SERVER=https://dev-static.rust-lang.org rustup update stable
</code></pre>
<p>The index is <a href="https://dev-static.rust-lang.org/dist/2021-06-15/index.html">https://dev-static.rust-lang.org/dist/2021-06-15/index.html</a>. You
can leave feedback on the <a href="https://internals.rust-lang.org/t/1-53-0-prerelease-testing/14884">internals thread</a>.</p>

    </div>
  </div>
</section>
    <footer>
      <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
        <div class="row">
          <div class="four columns mt3 mt0-l" id="get-help">
            <h4>Get help!</h4>
            <ul>
              <li><a href="https://doc.rust-lang.org" target="_blank" rel="noopener">Documentation</a></li>
              <li><a href="mailto:core-team@rust-lang.org">Contact the Rust Team</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Terms and policies</h4>
            <ul>
              <li><a href="https://www.rust-lang.org/policies/code-of-conduct">Code of Conduct</a></li>
              <li><a href="https://www.rust-lang.org/policies/licenses">Licenses</a></li>
              <li><a href="https://www.rust-lang.org/policies/media-guide">Logo Policy and Media Guide</a></li>
              <li><a href="https://www.rust-lang.org/policies/security">Security Disclosures</a></li>
              <li><a href="https://www.rust-lang.org/policies">All Policies</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Social</h4>
            <div class="flex flex-row flex-wrap">
              <a rel="me" href="https://social.rust-lang.org/@rust" target="_blank" rel="noopener" alt="mastodon link"><img src="../../../../images/mastodon.svg" alt="mastodon logo" title="Mastodon"/></a>
              <a href="https://twitter.com/rustlang" target="_blank" rel="noopener" alt="twitter link"><img src="../../../../images/twitter.svg" alt="twitter logo" title="Twitter"/></a>
              <a href="https://www.youtube.com/channel/UCaYhcUwRBNscFNUKTjgPFiA" target="_blank" rel="noopener" alt="youtube link"><img style="padding-top: 6px; padding-bottom:6px" src="../../../../images/youtube.svg" alt="youtube logo" title="YouTube"/></a>
              <a href="https://discord.gg/rust-lang" target="_blank" rel="noopener" alt="discord link"><img src="../../../../images/discord.svg" alt="discord logo" title="Discord"/></a>
              <a href="https://github.com/rust-lang" target="_blank" rel="noopener" alt="github link"><img src="../../../../images/github.svg" alt="github logo" title="GitHub"/></a>
            </div>
            <h4 class="mt4 mb3">RSS</h4>
            <ul>
              <li><a href="../../../../feed.xml">Main Blog</a></li>
              <li><a href="../../../../inside-rust/feed.xml">"Inside Rust" Blog</a></li>
            </ul>
          </div>
    
        </div>
        <div class="attribution">
          Maintained by the Rust Team. See a typo?
          <a href="https://github.com/rust-lang/blog.rust-lang.org" target="_blank" rel="noopener">Send a fix here</a>!
        </div>
      </div>
    </footer>
    
    <!-- scripts -->
    <script src="../../../../scripts/highlight.js"></script>
  </body>
</html>
